Created migrations, user and url routes
